productive section fix link color contrast

--- a/style/_productive.scss
+++ b/style/_productive.scss
@@ -23,7 +23,8 @@
             margin: auto;
             width: max-content;
             cursor: pointer;
-            color: $moderate-cyan;
+            // color: $moderate-cyan;
+            color: #308275;
             display: flex;
             align-items: center;
             gap: .25rem;
