--- a/style/style.css
+++ b/style/style.css
@@ -153,7 +153,7 @@ header nav ul a {
   width: -moz-max-content;
   width: max-content;
   cursor: pointer;
-  color: hsl(170deg, 45%, 43%);
+  color: #308275;
   display: flex;
   align-items: center;
   gap: 0.25rem;
